--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <h1 class="text round">
       YUPPYYYYYYY !!!!!!! ❤️ <br>
     </h1>
-    <a class="text-small round" target="_blank" href="https://g.co/kgs/Rup357Q">📍 <span class="text-underline"> Ristorante Mamima</span> 20:00</a>
+    <a class="text-small round" target="_blank" [href]="url">📍 <span class="text-underline"> {{ place }}</span> {{time}}</a>
 } @else {
     <h1  class="text round">
       {{name}}, would you be my Valentine ?
